--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
 
 
 
-/*AULA13
+
+
+/*aula 13
+
+
+Como adicionar ma fonte no texto que vc baixou de um site e vc curtiu. Vc tem que baixar e converter
+no formato woff.Após converter adicione com o comando abaixo.
+
+@font-face {
+
+font-family: open_sans;
+
+src: url(Muthiara-demo-version.woff);
+
+
+
+}
+
+div {font-family: open_sans; }
 
 
 font-family: 'Times New Roman', Times, serif; ( escolhe o tipo de fonte a ser usada no texto,
@@ -40,7 +58,7 @@ border-bottom-right-radius: seleciona a borda de acordo com esquerda , direita (
 *{box-sizing: border-box;}
 
 #conteudo5 { width: 300px; height: 50px;
-     background: steelblue; overflow: auto;   }
+     background-color: rgb(230, 89, 225,0.9)   ; overflow: auto; font  }
 
 #conteudo3 {  opacity:0.5 ; width: 500px; padding: 30px;  
      background: red; box-shadow: seagreen 10px 10px ; 
